
- Clarified that from_epoch(), today(), and now() all return objects
in the UTC time zone.  Suggested by Sagar Shah and others.

[ BUG FIXES ]

- Trying to serialize DateTime::Infinite objects with Storable blew
up.  Patch by Daisuke Maki.

- Require Test::More 0.34+, since I use a function introduced in that
version in the tests.  Suggested by Jean Forget.


0.22    2004-07-23

[ *** BACKWARDS INCOMPATIBILITIES *** ]

- The leap second table we were using mistakenly included a leap
second on December 31, 1971.  This will break all versions of the
DateTime::Format::Epoch::TAI64 module up to and including version
0.06.  Most users of DateTime.pm will not be affected.  Patch by
Joshua Hoblitt.


0.2101  2004-06-10

[ BUG FIXES ]

- There was a bug in the date math code that occurred if you tried to
add enough days, minutes or seconds to generate a datetime 10 years in
the future (or so).  If the the DateTime object had a a time zone with
recurring DST changes, then the date math operation would cause a
fatal error "Invalid local time for date in time zone ...".  Reported
by Dave Faraldo.


0.21  2004-03-28 (The "Another YAPC::Taipei release party release" release)

[ *** BACKWARDS INCOMPATIBILITIES *** ]

- When given mixed positive & negative arguments, DateTime::Duration
no longer forces all arguments to be negative.

- For mixed durations, the is_positive, is_zero, and is_negative
methods all return false.

- Brought back stringification overloading.  As of version 1.06,
Devel::StackTrace will ignore this overloading when displaying a
trace.

[ ENHANCEMENTS ]

- Add a new in_units() method to DateTime::Duration.  Patch by Andrew
Pimlott.

- Rely on DateTime::TimeZone and DateTime::Locale having their own
Storable hooks, as opposed to handling them in DateTime.pm's own
Storable hooks.  This should fix RT ticket #5542, reported by Dan
Rowles (I hope).

- More docs on how date math is done.  See the new section "The
Results of Date Math".

[ BUG FIXES ]
